# tiger-ocaml

./: Makefile  README.md  env.ml  semantic.ml  shell.nix
examples/: p1.tiger
src/: driver.ml  dune  lexer.mll  location.ml  option.ml  option.mli  parser.mly
src/lib/: absyn.ml  absyntotree.ml  absyntree.ml  box.ml  dune  env.ml  error.ml  lexer.mll  location.ml  parser.mly  semantic.ml  symbol.ml  test.ml  test1.mly  tree.ml  types.ml
src/tests/: dune  test_lexer_1.ml  test_lexer_2.expected  test_lexer_2.ml  test_lexer_2.ml~
